<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 首页 -->
    <string name="app_name">YoHey</string>
    <string name="hello_world">Hello world!</string>
    <string name="tuijiankaihei">推荐开黑</string>
    <string name="onclickformore">点击更多</string>
    <string name="server">服务器</string>
    <string name="grade">段位</string>
    <string name="aiouniya">艾欧尼亚--求一名队友一起组队开黑</string>
    <string name="zhao">赵日天不服</string>
    <string name="heisemeigui">黑色玫瑰--求大腿带我飞</string>
    <string name="nuokesashi">诺克萨斯--来几个开黑的，现在差上单跟打野，5黑完爆对面</string>
    <string name="pig_love">猪哥我爱你</string>
    <string name="bojin">铂金</string>
    <string name="zhuanshi">钻石</string>
    <string name="new_situation">撸友新动态</string>
    <string name="not_afarid_freads">不错过每分信息</string>
    <string name="video_highlights">精彩视频集锦</string>
    <string name="compilation">各种精彩搞笑合辑</string>
    <string name="not_afarid">不错过每分信息</string>
    <string name="not_afarid_official">官方新动态</string>
    <string name="latest_news">时刻了解最新资讯</string>
    <string name="win_points">转转赢积分</string>
    <string name="quadruple">积分翻倍好机会</string>
    <string name="new_posts">新发帖</string>
    <string name="meng_mei">本萌妹超厉害</string>
    <string name="list_time">3分钟前</string>
    <string name="area">大区</string>
    <string name="main_title_wi">主页</string>
    <!-- 首页底部按钮 -->
    <string name="homepage">首页</string>
    <string name="friends">好友</string>
    <string name="lufriends">LU友圈</string>
    <string name="me">我</string>
    <!-- 登录页面 -->
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="remember_pw">记住密码</string>
    <string name="forget_pw">忘记密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="QQ_login">QQ登录</string>
    <string name="weibo_login">微博登录</string>
    <!-- 好友 -->
    <string name="msg">消息</string>
    <string name="add">添加</string>
    <string name="serache">搜索</string>
    <string name="yueheifriends">约黑好友</string>
    <string name="gamefriends">游戏好友</string>
    <string name="myfriends">我的好友</string>
    <string name="game_online">游戏在线</string>
    <string name="offline">离线</string>
    <string name="playing">游戏中</string>
    <string name="online">在线</string>
    <!-- LU友圈 -->
    <string name="dynamic">动态</string>
    <string name="anybody">十连胜，就问还有谁</string>
    <string name="duola">多拉不爱梦</string>
    <string name="carry_me_fly">黑色玫瑰铂金3妹纸，求大神带我飞</string>
    <!-- 我 -->
    <string name="my_msg">我的资料</string>
    <string name="my_post">我的帖子</string>
    <string name="score">积分商城</string>
    <string name="system_set">系统设置</string>
    <string name="sign_in">签到</string>

    <!-- 个人资料 -->
    <string name="others_impression">他人印象</string>
    <string name="recruitment_information">招募信息</string>
    <string name="signature">个性签名</string>
    <string name="record">战绩</string>
    <string name="ao_virginia">艾欧尼亚</string>
    <string name="available_first_win">首胜可用</string>
    <!-- 注册 -->
    <string name="china">中国+86</string>
    <string name="fill_in_your_phone_number">填写手机号码</string>
    <string name="enter_your_phone_number">请输入手机号码</string>
    <string name="next">下一步</string>
    <string name="terms_of_use">我已阅读并同意使用条款和隐私政策</string>
    <string name="another_one">换一张</string>
    <string name="safety_verification">安全验证</string>
    <string name="enter_confirmation_code">请输入验证码</string>
    <string name="submit">提交</string>
    <string name="resend">重新发送</string>
    <string name="message_verification_code">请输入短信验证码</string>
    <string name="binding">将此手机号与QQ号绑定，提高账号安全性</string>
    <string name="msg_time">08:12</string>
    <string name="num">1</string>
    <string name="idea">這一刻你的想法</string>
    <string name="position">所在位置</string>
    <string name="who_can_see">谁可以看</string>
    <string name="see_who_remind">提醒誰看</string>
    <string name="cancel">取消</string>
    <string name="share">分享</string>
    <string name="send">發送</string>
    <string name="say">我也说一句....</string>
    <string name="personal_post">个人发帖</string>
    <string name="posts">帖子内容。。。</string>
    <string name="add_picture">添加图片</string>
    <string name="permission_settings">权限设置</string>
    <string name="osts">发帖</string>
    <string name="publication">发表</string>
    <string name="qq">QQ号/游戏ID</string>
    <string name="new_frieds">新的朋友</string>
    <string name="favorite">喜爱最多</string>
    <string name="xinlang">新浪微博</string>
    <string name="qqweb">腾讯微博</string>
    <string name="posted_messages">我发过的帖子</string>
    <string name="post_added">我加入的帖子</string>
    <string name="more_more">更多....</string>
    <string name="my_posted_messages">我发过的帖子</string>
    <string name="participation_posts">我加入的帖子</string>
    <string name="hide">隐藏</string>
    <string name="report">举报</string>
    <string name="forwarding">转发</string>
    <string name="comments">评论</string>
    <string name="praise">赞</string>
    <string name="to_return">返回</string>
    <string name="details">详情</string>
    <string name="public_w">公开</string>
    <string name="private_w">私密</string>
    <string name="partially_visible">部分可见</string>
    <string name="invisible_part">不给谁看</string>
    <string name="visible_to_friends">所有朋友可见</string>
    <string name="only_yourself_visible">仅自己可见</string>
    <string name="select_visible">选中的朋友可见</string>
    <string name="selected_invisible">选中的朋友不可见</string>
    <string name="over">完成</string>

    <!-- 阿里雲引用 -->
    <string name="iconfont">&#13804;</string>
    <string name="gt">&#xe624;</string>
    <string name="amp">&#xe611;</string>
    <string name="ltigt">&#xe607;</string>
    <string name="yang">&#xe612;</string>
    <string name="addd">&#xe603;</string>
    <string name="message">&#xe689;</string>
    <string name="appreciate">&#xe644;</string>
    <string name="more">&#xe6ad;</string>
    <string name="search">&#xe699;</string>
    <string name="QQ">&#xe607;</string>
    <string name="xin_lang_web">&#xe635;</string>
    <string name="personal">&#xe7b6;</string>
    <string name="my_posts">&#xe68b;</string>
    <string name="integral">&#xe601;</string>
    <string name="setting">&#xe604;</string>

    <!-- 设置 -->
    <string name="account_manager">账号管理</string>
    <string name="account_safety">账号安全</string>
    <string name="usual_set">通用设置</string>
    <string name="clear_cache">清理缓存</string>
    <string name="private_set">隐私设置</string>
    <string name="question_back">问题反馈</string>
    <string name="about_us">关于我们</string>
    <string name="exit_account">退出账号</string>
    <string name="add_account">添加账号</string>
    <string name="login_name">登录名</string>
    <string name="email_addr">邮箱地址</string>
    <string name="unbind">未绑定</string>
    <string name="tel">手机号</string>
    <string name="change_pw">修改密码</string>
    <string name="safety_center">安全中心</string>
    <string name="textsize_set">字号设置</string>
    <string name="small">小</string>
    <string name="sound_vibrate">声音与振动</string>
    <string name="display_beizhu">显示备注信息</string>
    <string name="start_fast_move">开启快速拖动</string>
    <string name="portrait_landscape">横竖屏自动切换</string>
    <string name="add_need">加我时需要验证</string>
    <string name="qq_friend">向我推荐QQ好友</string>
    <string name="search_by_tel">可通过手机号搜索到我</string>
    <string name="blacklist">通讯录黑名单</string>
    <string name="do_let_them_see">不让他（她）看到我的lu友圈</string>
    <string name="say_something">说点什么吧...</string>
    <string name="display_location">显示位置</string>
    <string name="str_public">公开</string>
    <string name="score_to_me">给我们评分</string>
    <string name="function">功能介绍</string>
    <string name="check_new_version">检查新版本</string>
    <!-- jfdklajflajdflajfdfasljfk -->
    <string name="app_main_login">登陆</string>
    <string name="app_main_api">API</string>
    <string name="app_main_qq_share">QQ分享(无需登录)</string>
    <string name="app_main_qzon_share">QZone(无需登录)</string>
    <string name="app_main_social_api">社交API</string>
    <string name="app_main_is_support_sso_login">是否支持SSO登陆</string>
    <string name="app_main_get_user_info">获取用户资料</string>
    <string name="app_main_add_friend_in_game">游戏内加好友</string>
    <string name="app_main_set_avatar">设置头像</string>
    <string name="app_main_visit_qzone_gallery">访问空间相册</string>
    <string name="app_main_get_weibo_info">获取腾讯微博资料及权限</string>
    <string name="app_main_wap">临时登陆(无需登陆)</string>
    <string name="app_main_weiyun">微云</string>
    <string name="app_main_others">其他</string>
    <string name="app_main_appbar">应用吧</string>
    <string name="app_main_qqgroupp_api">群API</string>

    <!-- 游戏大区 -->
    <string-array name="game_region">
        <item >全部</item>
        <!-- 电信区 -->  
        <item>艾欧尼亚</item>
        <item>祖安</item>
        <item>洛克萨斯</item>
        <item>班德尔城</item>
        <item>皮尔特沃夫</item>
        <item>战争学院</item>
        <item>巨神峰</item>
        <item>雷瑟守备</item>
        <item>裁决之地</item>
        <item>黑色玫瑰</item>
        <item>暗影岛</item>
        <item>钢铁烈阳</item>
        <item>均衡教派</item>
        <item>水晶之痕</item>
        <item>影流</item>
        <item>守望之海</item>
        <item>征服之海</item>
        <item>卡拉曼达</item>
        <item>皮城警备</item>
        <!-- 网通区 -->
        <item>比尔吉沃特</item>
        <item>德玛西亚</item>
        <item>弗雷尔卓德</item>
        <item>无畏先锋</item>
        <item>怒瑞玛</item>
        <item>扭曲森林</item>
        <item>巨龙之巢</item>     
    </string-array>
    <!-- 游戏段位 -->
    <string-array name="game_dan">
        <item>青铜</item>
        <item>白银</item>
        <item>黄金</item>
        <item>白金</item>
        <item>砖石</item>
        <item>大师</item>
        <item>王者</item>
    </string-array>

</resources>