<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include layout="@layout/title_navigation_bar"
        android:id="@+id/share_it_title_bar"/>
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/button_rounded_corners_and_solid"
    >
    <EditText 
        android:id="@+id/share_it_edit_ider"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@null"
        android:textSize="12sp"
        android:gravity="top"
        android:padding="5dp"
        android:hint="@string/idea"/>
    <TextView 
        android:id="@+id/share_it_text_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/position"/>
</LinearLayout>
<TextView 
    android:id="@+id/share_it_text_who"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_marginTop="20dp"
android:background="@drawable/button_rounded_corners_and_solid"
    android:text="@string/who_can_see"/>
<TextView 
    android:id="@+id/share_it_text_remind"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
android:background="@drawable/button_rounded_corners_and_solid"
    android:text="@string/see_who_remind"/>
</LinearLayout>
