<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
         <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rub_course_back_icon"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"/>
      <TextView 
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:text="@string/question_back"
          android:gravity="center"
          android:textSize="15sp"/>
    </RelativeLayout>
  <View 
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/beizhu"/>

  <EditText 
      
      android:layout_width="match_parent"
      android:layout_height="200dp"
      android:layout_margin="10dp"
      android:hint="@string/say_something"
      android:singleLine="false"
      android:gravity="start"/>
  <RelativeLayout 
      android:layout_width="match_parent"
      android:layout_height="30dp">
      <TextView 
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/display_location"
          android:layout_centerVertical="true"
          android:layout_marginLeft="20dp"/>
          <TextView 
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/str_public"
          android:layout_alignParentRight="true"
          android:layout_centerVertical="true"
          android:layout_marginRight="20dp"/>
  </RelativeLayout>
</LinearLayout>
