<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp" >

    <ImageView
        android:id="@+id/login_registered_image_head_portrait"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_registered_text_account"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:contentDescription="@drawable/ic_launcher"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/login_registered_text_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_registered_edit_account"
        android:layout_marginBottom="10dp"
        android:drawableLeft="@drawable/ic_launcher"
        android:drawableStart="@drawable/ic_launcher"
        android:gravity="center_vertical"
        android:text="@string/account" />

    <EditText
        android:id="@+id/login_registered_edit_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_registered_text_password"
        android:layout_centerHorizontal="true"
        android:hint="@string/account" />

    <TextView
        android:id="@+id/login_registered_text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dp"
        android:drawableLeft="@drawable/ic_launcher"
        android:drawableStart="@drawable/ic_launcher"
        android:gravity="center_vertical"
        android:text="@string/password" />

    <EditText
        android:id="@+id/login_registered_edit_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_registered_text_password"
        android:layout_centerHorizontal="true"
        android:hint="@string/password" />

    <RelativeLayout
        android:id="@+id/login_registered_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_registered_edit_password" >

        <CheckBox
            android:id="@+id/login_register_check_password"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:text="@string/remember_pw"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/login_register_text_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/forget_pw"
            android:textSize="13sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/login_registered_button_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_registered_relative_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_rounded_corners_and_solid"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/login_registered_button_registered"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_registered_button_login"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded_corners_and_solid"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/register" />

</RelativeLayout>