<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/add_include_title"
        layout="@layout/title_navigation_bar" />

    <!-- QQ号 -->

    <LinearLayout
        android:id="@+id/add_line_qq"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_stroke"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/qq"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/add_text_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/search" />
    </LinearLayout>

    <!-- 新的朋友 -->

    <LinearLayout
        android:id="@+id/add_line_new_freads"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_stroke"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/new_frieds"
            android:textSize="11sp" />

        <TextView
            android:id="@+id/add_text_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/qq"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/add_image_frieds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@drawable/rub_course_go_to_next_right"
            android:src="@drawable/rub_course_go_to_next_right"
            android:visibility="invisible" />
    </LinearLayout>

    <!-- 喜爱最多 -->

    <LinearLayout
        android:id="@+id/add_line_favorite"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_stroke"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/favorite"
            android:textSize="11sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp" />

        <ImageView
            android:id="@+id/add_image_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@drawable/rub_course_go_to_next_right"
            android:src="@drawable/rub_course_go_to_next_right"
            android:visibility="invisible" />
    </LinearLayout>

    <!-- 新浪微博 -->

    <LinearLayout
        android:id="@+id/add_line_xinlang"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/add_text_xinliang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/xin_lang_web" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/xinlang"
            android:textSize="11sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@drawable/rub_course_go_to_next_right"
            android:src="@drawable/rub_course_go_to_next_right" />
    </LinearLayout>

    <!-- QQ微博 -->

    <LinearLayout
        android:id="@+id/add_line_qq_web"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/add_text_qq_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/QQ" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/qqweb"
            android:textSize="11sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@drawable/rub_course_go_to_next_right"
            android:src="@drawable/rub_course_go_to_next_right" />
    </LinearLayout>

</LinearLayout>