<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f4f5"
    android:orientation="vertical" >
    <!-- 填写手机号的界面 -->
    <include
        android:id="@+id/mobile_number_title_bar"
        layout="@layout/title_navigation_bar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/mobile_number_text_china"
            android:layout_width="94dp"
            android:layout_height="37dp"       
            android:background="#ffffff"
            android:gravity="center"            
            android:text="@string/china"
            android:textColor="#666666"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/mobile_number_edit_phone_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingLeft="7dp"
            android:paddingStart="7dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:cursorVisible="false"
            android:hint="@string/enter_your_phone_number"
            android:textColor="#888888"
            android:textSize="15sp"
            android:inputType="phone" />
    </LinearLayout>

    <Button
        android:id="@+id/mobile_number_button_next"
        android:layout_width="fill_parent"
        android:layout_height="37dp"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:background="@drawable/button_rounded_corners_and_solid"
        android:text="@string/next"
        android:textColor="#ffffff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/mobile_number_chack"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:src="@drawable/yo_hey_xuanzhong"
            android:contentDescription="@drawable/yo_hey_xuanzhong"/>

        <TextView
            android:id="@+id/mobile_number_test_terms_of_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginStart="7dp"
            android:text="@string/terms_of_use"
            android:textSize="15sp"
            android:textColor="#888888"/>
    </LinearLayout>

</LinearLayout>